--- a/acercade.html
+++ b/acercade.html
@@ -22,6 +22,8 @@
    </header>
    <article>
       <h2>Acerca de</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus obcaecati optio quas debitis excepturi deleniti, neque accusamus. Suscipit atque in voluptatem voluptas, reprehenderit porro iure quibusdam magni, rerum officia dolore!</p>
+      <img src="./images/chef-1245676_1280.jpg" alt="nicolasmahnic">
    </article>
    <footer>
       <div id="socialnetworks"></div>
