--- a/contacto.html
+++ b/contacto.html
@@ -22,6 +22,7 @@
    </header>
    <article>
       <h2>Contacto</h2>
+      <p>Puedes contactarme a: <a href="mailto: yococino@gmail.com">yococino@gmail.com</a></p> 
    </article>
    <footer>
       <div id="socialnetworks"></div>
