--- a/TP3/acercade.html
+++ b/TP3/acercade.html
@@ -11,11 +11,11 @@
    <header>
       <nav>
          <ul>
-            <li><a href="https://mash94.github.io/plainWebSite/home.html">Home</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/acercade.html">Acerca de</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/contacto.html">Contacto</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/registro.html">Registro</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/sucursales.html">Sucursales</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/home.html">Home</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/acercade.html">Acerca de</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/contacto.html">Contacto</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/registro.html">Registro</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/sucursales.html">Sucursales</a></li>
          </ul> 
       </nav>
       <h1>La cocina de Nico</h1>
@@ -23,7 +23,7 @@
    <article>
       <h2>Acerca de</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus obcaecati optio quas debitis excepturi deleniti, neque accusamus. Suscipit atque in voluptatem voluptas, reprehenderit porro iure quibusdam magni, rerum officia dolore!</p>
-      <img src="./images/chef-1245676_1280.jpg" alt="nicolasmahnic">
+      <img src="../images/chef-1245676_1280.jpg" alt="nicolasmahnic">
    </article>
    <footer>
       <div id="socialnetworks"></div>
