--- a/TP3/registro.html
+++ b/TP3/registro.html
@@ -11,11 +11,11 @@
    <header>
       <nav>
          <ul>
-            <li><a href="https://mash94.github.io/plainWebSite/home.html">Home</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/acercade.html">Acerca de</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/contacto.html">Contacto</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/registro.html">Registro</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/sucursales.html">Sucursales</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/home.html">Home</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/acercade.html">Acerca de</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/contacto.html">Contacto</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/registro.html">Registro</a></li>
+            <li><a href="https://mash94.github.io/plainWebSite/TP3/sucursales.html">Sucursales</a></li>
          </ul> 
       </nav>
       <h1>La cocina de Nico</h1>
