correccion de link

--- a/TP3/home.html
+++ b/TP3/home.html
@@ -22,7 +22,7 @@
    </header>
    <article>
       <h2>Main</h2>
-      <img src="./images/pancakes-2020863_1280.jpg" alt="panqueques">
+      <img src="../images/pancakes-2020863_1280.jpg" alt="panqueques">
    </article>
    <footer>
       <div id="socialnetworks"></div>
