--- a/TP1/contacto.html
+++ b/TP1/contacto.html
@@ -10,10 +10,10 @@
 <body>
    <header>
       <nav>
-         <ul>
-            <li><a href="https://mash94.github.io/plainWebSite/TP1/home.html">Home</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/TP1/acercade.html">Acerca de</a></li>
-            <li><a href="https://mash94.github.io/plainWebSite/TP1/contacto.html">Contacto</a></li>
+         <ul class="navUl">
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP1/home.html">Home</a></li>
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP1/acercade.html">Acerca de</a></li>
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP1/contacto.html">Contacto</a></li>
             <li class="porfolio"><a href="https://mash94.github.io/plainWebSite/index.html">Porfolio TPs</a></li>
          </ul> 
       </nav>
