--- a/TP1/contacto.html
+++ b/TP1/contacto.html
@@ -19,10 +19,12 @@
       </nav>
       <h1>La cocina de Nico</h1>
    </header>
-   <article>
-      <h2>Contacto</h2>
-      <p>Puedes contactarme a: <a href="mailto: yococino@gmail.com">yococino@gmail.com</a></p> 
-   </article>
+   <section>
+      <article>
+         <h2>Contacto</h2>
+         <p>Puedes contactarme a: <a href="mailto: nico.mahnic94@gmail.com">nico.mahnic94@gmail.com</a></p> 
+      </article>
+   </section>
    <footer>
       <div id="socialnetworks"></div>
       <div id="copyrigths">Derechos reservados @2020</div>
