--- a/TP1/acercade.html
+++ b/TP1/acercade.html
@@ -19,11 +19,16 @@
       </nav>
       <h1>La cocina de Nico</h1>
    </header>
-   <article>
-      <h2>Acerca de</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus obcaecati optio quas debitis excepturi deleniti, neque accusamus. Suscipit atque in voluptatem voluptas, reprehenderit porro iure quibusdam magni, rerum officia dolore!</p>
-      <img src="../images/chef-1245676_1280.jpg" alt="nicolasmahnic">
-   </article>
+   <section>
+      <article>
+         <h2>Acerca de</h2>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus obcaecati optio quas debitis excepturi deleniti, neque accusamus. Suscipit atque in voluptatem voluptas, reprehenderit porro iure quibusdam magni, rerum officia dolore!</p>
+         
+      </article>
+      <aside>
+         <img src="../images/chef-1245676_1280.jpg" alt="nicolasmahnic">
+      </aside>
+   </section>
    <footer>
       <div id="socialnetworks"></div>
       <div id="copyrigths">Derechos reservados @2020</div>
