--- a/TP3/registro.html
+++ b/TP3/registro.html
@@ -21,7 +21,7 @@
       </nav>
       <h1>La cocina de Nico</h1>
    </header>
-   <article>
+   <section>
       <h2>Registro</h2>
       <form id="formulario">
          <label for="nombre">Nombres:</label>
@@ -72,7 +72,7 @@
       </form>
       <label>Comentarios:</label><br>
       <textarea rows="4" cols="50" name="comentario" form="formulario">Escriba aquí...</textarea>
-   </article>
+   </section>
    <footer>
       <div id="socialnetworks"></div>
       <div id="copyrigths">Derechos reservados @2020</div>
