--- a/TP3/sucursales.html
+++ b/TP3/sucursales.html
@@ -21,13 +21,13 @@
       </nav>
       <h1>La cocina de Nico</h1>
    </header>
-   <article>
+   <section>
       <h2>Sucursales</h2>
       <address>
          Tu casa<br>
          CABA
       </address>
-   </article>
+   </section>
    <footer>
       <div id="socialnetworks"></div>
       <div id="copyrigths">Derechos reservados @2020</div>
