--- a/TP3/home.html
+++ b/TP3/home.html
@@ -19,7 +19,7 @@
             <li class="porfolio"><a href="https://mash94.github.io/plainWebSite/index.html">Porfolio TPs</a></li>
          </ul> 
       </nav>
-      <h1>La cocina de Nico</h1>
+      <h1>La cocina de Nico TP3</h1>
    </header>
    <section>
       <article>
