--- a/TP1/home.html
+++ b/TP1/home.html
@@ -17,7 +17,7 @@
             <li class="porfolio"><a href="https://mash94.github.io/plainWebSite/index.html">Porfolio TPs</a></li>
          </ul> 
       </nav>
-      <h1>La cocina de Nico</h1>
+      <h1>La cocina de Nico TP1</h1>
    </header>
    <section>
       <article>
