--- a/TP3/home.html
+++ b/TP3/home.html
@@ -11,9 +11,11 @@
    <header>
       <nav>
          <ul class="navUl">
-            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP2/home.html">Home</a></li>
-            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP2/acercade.html">Acerca de</a></li>
-            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP2/contacto.html">Contacto</a></li>
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP3/home.html">Home</a></li>
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP3/acercade.html">Acerca de</a></li>
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP3/contacto.html">Contacto</a></li>
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP3/registro.html">Registro</a></li>
+            <li class="navLi"><a href="https://mash94.github.io/plainWebSite/TP3/sucursales.html">Sucursales</a></li>
             <li class="porfolio"><a href="https://mash94.github.io/plainWebSite/index.html">Porfolio TPs</a></li>
          </ul> 
       </nav>
